--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dotenv = "0.15"
 reqwest = { version = "0.11", features = ["json"] }
 tower-http = { version = "0.4", features = ["cors"] }
+tower = { version = "0.4", features = ["util"] }
+hyper = { version = "0.14", features = ["full"] }
+uuid = { version = "1.3", features = ["v4"] }
+thiserror = "1.0"
